# NenNetwork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
res/kii/: input.txt  verfiy.txt  weights.txt
res/self/: bias.txt  input.txt  output.txt  weights.txt
res/youtube/: input.txt  output.txt  weights.txt
src/Utils/: Utils.cpp  Utils.h
src/de/xentec/neuronal/client/configuration/: NNCreateConfiguration.cpp  NNCreateConfiguration.h  NNLoadConfiguration.cpp  NNLoadConfiguration.h
src/de/xentec/neuronal/client/configuration/interface/: NNConfigurationService.cpp  NNConfigurationService.h
src/de/xentec/neuronal/client/input/: FileInputService.cpp  FileInputService.h  ImageInputService.cpp  ImageInputService.h  NumberInputService.cpp  NumberInputService.h
src/de/xentec/neuronal/client/input/decoder/: FileTextDecoder.cpp  FileTextDecoder.h  MNISTDecoder.cpp  MNISTDecoder.h
src/de/xentec/neuronal/client/input/decoder/base/: DecoderInterface.h
src/de/xentec/neuronal/client/input/interface/: InputService.cpp  InputService.h
src/de/xentec/neuronal/client/input/model/image/: Image.cpp  Image.h
src/de/xentec/neuronal/client/output/: FileOutputService.cpp  FileOutputService.h
src/de/xentec/neuronal/client/output/interface/: OutputService.cpp  OutputService.h
src/de/xentec/neuronal/client/parameter/: NNStaticParameter.cpp  NNStaticParameter.h
src/de/xentec/neuronal/client/parameter/function/activation/: SigmoidFunction.cpp  SigmoidFunction.h
src/de/xentec/neuronal/client/parameter/function/activation/interface/: ActivationFunction.cpp  ActivationFunction.h
src/de/xentec/neuronal/client/parameter/function/error/: QuadraticFunction.cpp  QuadraticFunction.h
src/de/xentec/neuronal/client/parameter/function/error/interface/: ErrorFunction.cpp  ErrorFunction.h
src/de/xentec/neuronal/client/parameter/interface/: NNParameterService.cpp  NNParameterService.h
src/de/xentec/neuronal/core/case/: NNPredictCase.cpp  NNPredictCase.h  NNTrainCase.cpp  NNTrainCase.h
src/de/xentec/neuronal/core/case/base/: CaseService.cpp  CaseService.h
src/de/xentec/neuronal/core/network/fullconntected/: FullConnectedService.cpp  FullConnectedService.h
src/de/xentec/neuronal/core/network/fullconntected/builder/: FullConnectedBuilder.cpp  FullConnectedBuilder.h
src/de/xentec/neuronal/core/network/fullconntected/interface/: NeuronalNetworkService.cpp  NeuronalNetworkService.h
src/de/xentec/neuronal/core/network/model/: NeuronalNetwork.cpp  NeuronalNetwork.h
